objects/Vehicle__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>A one-line description of the Vehicle and what it&apos;s for.</description>
        <inlineHelpText>A one-line description of the Vehicle and what it&apos;s for.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fundraising_Completed__c</fullName>
        <description>The date the fundraising period ended.</description>
        <inlineHelpText>The date the fundraising period ended.</inlineHelpText>
        <label>Fundraising Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fundraising_Started__c</fullName>
        <description>The date the fundraising period started.</description>
        <inlineHelpText>The date the fundraising period started.</inlineHelpText>
        <label>Fundraising Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Investing_Completed__c</fullName>
        <description>The date the investing period ended.</description>
        <inlineHelpText>The date the investing period ended.</inlineHelpText>
        <label>Investing Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Investing_Started__c</fullName>
        <description>The date the investing period started.</description>
        <inlineHelpText>The date the investing period started.</inlineHelpText>
        <label>Investing Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Actively_Investing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Vehicle still actively investing right now?</description>
        <inlineHelpText>Is the Vehicle still actively investing right now?</inlineHelpText>
        <label>Is Actively Investing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Actively_Raising__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Vehicle still actively fundraising right now?</description>
        <inlineHelpText>Is the Vehicle still actively fundraising right now?</inlineHelpText>
        <label>Is Actively Raising?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Vehicle lookup to nest vehicles (relevant to VP vehicles).</description>
        <inlineHelpText>The parent Vehicle lookup to nest vehicles (relevant to VP vehicles).</inlineHelpText>
        <label>Parent Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Type__c</fullName>
        <description>The type (financial structure) of the Vehicle.</description>
        <inlineHelpText>The type (financial structure) of the Vehicle.</inlineHelpText>
        <label>Vehicle Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fund</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                </value>
                <value>
                    <fullName>SPV</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>VP-SPV</fullName>
                </value>
                <value>
                    <fullName>VP-Angel</fullName>
                </value>
                <value>
                    <fullName>VP-Seed</fullName>
                </value>
                <value>
                    <fullName>VP-Personal</fullName>
                </value>
                <value>
                    <fullName>Holdco</fullName>
                </value>
                <value>
                    <fullName>Angel</fullName>
                </value>
                <value>
                    <fullName>Co-Invest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Venture_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact for the Venture Partner (if applicable).</description>
        <inlineHelpText>The Contact for the Venture Partner (if applicable).</inlineHelpText>
        <label>Venture Partner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>